# bmstu-aa-5th-sem

./: .gitignore  README.md
homework/: main.rs
lab_02_rust/: Cargo.toml
lab_02_rust/benches/: bench.rs
lab_02_rust/docs/latex/: 00-intro.tex  01-theoretical.tex  02-practical.tex  03-implementation.tex  04-research.tex  05-conclusion.tex  biblio.bib  makefile  report.tex
lab_02_rust/docs/latex/inc/: base.drawio  w.drawio
lab_02_rust/src/: lib.rs  main.rs
lab_02_rust/src/matrix/: algos.rs  mod.rs  util.rs
lab_04/: Cargo.toml
lab_04/benches/: bench.rs
lab_04/docs/latex/: 00-intro.tex  01-theoretical.tex  02-practical.tex  03-implementation.tex  04-research.tex  05-conclusion.tex  biblio.bib  makefile  report.fdb_latexmk  report.tex
lab_04/docs/latex/inc/: base.drawio  base2.drawio  expandclusters.drawio  expandclusters3.drawio  expandclusters4.drawio  expandclusters5.drawio  markCore.drawio  winograd1.drawio
lab_04/src/: lib.rs  main.rs
lab_04/src/dbscan/: dataset.rs  mod.rs  model.rs  para_model.rs  plotter.rs  sort.rs  util.rs  utils.rs
lab_05/: Cargo.toml
lab_05/benches/: bench.rs
lab_05/doc/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  report.fdb_latexmk
lab_05/src/: main.rs
lab_05/src/dbscan/: conveyor.rs  dataset.rs  mod.rs  model.rs  para_model.rs  plotter.rs  task.rs  utils.rs
lab_06/: Cargo.toml
lab_07/: Cargo.toml
lab_07/doc/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  preamble.inc.tex
lab_07/src/: main.rs
lab_07/src/lib/: constants.rs  maps.rs  mod.rs  terms.rs
lab_07/src/lib/maps/: tests.rs
(+66 files in other folders)
