[package]
authors = [ "Simeon Romanov <archeosAnacritis@gmail.com>" ]
name = "lab_02"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[dependencies]
colored = "2.0.0"
rand = "0.8.4"

[profile.bench.package.lab_02]
debug = false
opt-level = 0