[package]
authors = [ "Simeon Romanov <archeosAnacritis@gmail.com>" ]
name = "lab_05"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[dependencies]
rand = "^0"
termion = "^1"
env_logger = "^0"
log = "^0"
chrono = "^0"
crossbeam = "0.8.2"
colored = "2.0.0"
csv = "1.1.6"
plotters = "0.3.4"
