[package]
authors = [ "Simeon Romanov <archeosAnacritis@gmail.com>" ]
name = "lab_07"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
colored = "2.0.0"
serde_derive = "1.0.117"
csv="1.1.5"
num-format="0.4.0"
regex="1.7.1"
